--- a/frontend/src/components/footer/styles.css
+++ b/frontend/src/components/footer/styles.css
@@ -11,5 +11,22 @@ footer .title{
     margin: 0 0 5px;
     cursor: pointer;
     display: flex;
-    align-items: center;
+    justify-content: center;
+    padding: 5px 0 20px;
+    border-bottom: 1px solid #000000;
+}
+
+footer ul{
+    display: flex;
+    justify-content: center;
+    padding: 20px 0 75px;
+}
+
+footer ul li{
+    list-style: none;
+    margin: 0 8px;
+}
+footer ul li a{
+    font-size: 20px;
+    text-decoration: #e7e7e7;
 }
