nova estilização do header

--- a/frontend/src/app.css
+++ b/frontend/src/app.css
@@ -1,12 +1,9 @@
 @import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,400;0,900;1,400;1,900&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Rubik:wght@400;500;600&display=swap');
 *{
     box-sizing: border-box;
     margin: 0;
     padding: 0;
-}
-
-.icons{
-  color:#FFFBFB
 }
 
 .icons, button{
