--- a/frontend/src/components/footer/styles.css
+++ b/frontend/src/components/footer/styles.css
@@ -5,8 +5,6 @@ footer{
 
 footer .title{
     color: #fff;
-    font-family: 'Roboto', sans-serif;
-    color: #fff;
     font-size: 20px;
     margin: 0 0 5px;
     cursor: pointer;
@@ -14,6 +12,12 @@ footer .title{
     justify-content: center;
     padding: 5px 0 20px;
     border-bottom: 1px solid #000000;
+}
+
+footer .title h1{
+    font-family: 'Rubik', sans-serif;
+    color: #eeeeee;
+    font-weight: normal;
 }
 
 footer ul{
