--- a/frontend/src/components/header/styles.css
+++ b/frontend/src/components/header/styles.css
@@ -34,6 +34,11 @@ header form input{
     background-color: #ffffff2f;
 }
 
+input[type="checkbox"]:checked ~ form {
+     box-shadow: 0px 0px 12px 2px #0000004f; 
+
+}
+
 header form button{
     font-size: 20px;
     border: none;
