--- a/frontend/src/pages/home/styles.css
+++ b/frontend/src/pages/home/styles.css
@@ -1,6 +1,6 @@
 .welcome{
     width: 100%;
-    height: 250px;
+    height: 300px;
     background-color: #c0d1e7;
     text-align: center;
     padding: 50px 0;
@@ -36,7 +36,7 @@ section main h1{
     justify-content: center;
     margin: 5px 0;
     font-family: 'Roboto', sans-serif;
-    font-size: 30px;
+    font-size: 40px;
 }
 
 section main ul{
@@ -99,3 +99,56 @@ section main li .product-info p:hover{
     color: #202020;
 }
 
+.category{
+    width: 100%;
+    margin: 30px 0 0;
+}
+
+.category h1{    
+    position: absolute;
+    margin: 5px 0;
+    font-family: 'Roboto', sans-serif;
+    font-size: 45px;
+    font-weight: 400;
+    transform: translateY(80px);
+}
+
+.category ul{
+    display: flex;
+    align-items: center;
+}
+
+.category ul li{
+    height: 125px;
+    width:  145px;
+    margin: 25px;
+    border-radius: 5px;
+    background-color: #C4C4C4;
+    display: flex;
+    justify-content: center;
+    cursor: pointer;
+    position: relative;
+    border: 1px solid #1a1a1a2d;
+}
+
+.category ul li:hover{
+    box-shadow: 0px 0px 7px 3px rgba(0,0,0,0.56);
+    transition: 300ms;
+    font-size: 55px;
+}
+
+.category ul li .icons{
+    position: absolute;
+    font-size: 45px;
+    margin: 25px;
+}
+
+.category ul li p{
+    display: flex;
+    justify-content: center;
+    align-items: flex-end;
+    margin: 10px;
+    font-size: 20px;
+    font-family: 'Rubik', sans-serif;
+    font-weight: 100;
+}
