1/2 da criação do login concluida

--- a/frontend/src/pages/Produto/styles.css
+++ b/frontend/src/pages/Produto/styles.css
@@ -42,6 +42,9 @@ article{
     border-top: solid 1px black;
 }
 
+.produto-info .descricao{
+    max-height: 10px;
+}
 
 .produto-info .preco{
     font-size: 40px;
