--- a/frontend/src/app.css
+++ b/frontend/src/app.css
@@ -19,7 +19,7 @@ a:link {
 }
 
 a:hover {
-  color:#c7c6c6;
+  color:#000000b7;
   text-decoration:none;
   font-family: 'Roboto', sans-serif;
   font-weight: lighter;
