--- a/frontend/src/pages/Mensagem/styles.css
+++ b/frontend/src/pages/Mensagem/styles.css
@@ -1,6 +1,11 @@
 body{
-	padding: 25px;
 	background-color: #e6e6e6;
+}
+
+.mensagens h1{
+	margin:  10% 30%;
+	font-size: 50px;
+	color: #0000004d;
 }
 
 details{
